--- a/src/votingapp/Dockerfile
+++ b/src/votingapp/Dockerfile
@@ -2,7 +2,8 @@
 FROM golang AS builder
 
 RUN go get github.com/gorilla/websocket && \
-    go get github.com/labstack/echo
+    go get github.com/labstack/echo && \
+    go get github.com/go-redis/redis
 
 COPY . .
 
