Both Dockerfile, from votingapp & from test, using alpine

--- a/src/votingapp/Dockerfile
+++ b/src/votingapp/Dockerfile
@@ -1,8 +1,10 @@
 #BUILDER
-FROM alpine as builder
+FROM golang:1.13.4-alpine3.10 as builder
 
-#Cambiar por el gestor de alpine
-#Git no es parte de la distribución, hay que bajarlo
+#Git isn't part of this distribución, We have to download it first 
+#Package manager from alpine is apk so We should run first this one to get this dependencys
+
+RUN apk add --no-cache git
 
 RUN go get github.com/gorilla/websocket && \  
     go get github.com/labstack/echo
@@ -13,7 +15,7 @@ RUN go build -o /build/votingapp && \
     cp -r ui ./build
 
 #RUNTINE
-FROM alpine
+FROM alpine:3.10
 
 WORKDIR /app
 COPY --from=builder /build .
