--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,9 +1,6 @@
-FROM alpine
+FROM alpine:3.10
 #Cambiar por el gestor de alpine
-RUN apt-get update && apt-get install -y \ 
-    curl \
-    jq \
-    && rm -rf /var/lib/apt/lists/*
+RUN apk add --no-cache curl jq
 
 COPY test.sh .
 RUN chmod +x test.sh
