Using alpine docker image to run the pipeline

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,8 +1,8 @@
 FROM alpine:3.10
-#Cambiar por el gestor de alpine
+#To run the test script, first, We have to download mandatory dependencies (i.e curl & jo)
 RUN apk add --no-cache curl jq
 
 COPY test.sh .
 RUN chmod +x test.sh
 
-ENTRYPOINT [ "./test.sh" ]
+ENTRYPOINT [ "sh", "./test.sh" ]
