--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,8 +9,6 @@ services:
     build:
       dockerfile: Dockerfile
       context: ./src/votingapp
-    ports:
-      - 8080:80
     environment:
       REDIS: "myredis:6379"
 
@@ -20,4 +18,13 @@ services:
       dockerfile: Dockerfile
       context: ./test
     environment: 
-      VOTINGAPP_HOST: "myvotingapp"
+      VOTINGAPP_HOST: "myreverseproxy"
+
+  myreverseproxy:
+    image: rmuhamed/reverse-proxy
+    build:
+      dockerfile: Dockerfile
+      context: ./nginx
+    ports: 
+      - 8080:80
+
