Fixed some minor issues

--- a/votingapp.yaml
+++ b/votingapp.yaml
@@ -18,8 +18,8 @@ spec:
   - image: rmuhamed/votingapp:0.1
     name: myvotingapp
     env:
-      - name: redis
-        value: "myredis"
+      - name: REDIS
+        value: "myredis:6379"
 ---
 apiVersion: v1
 kind: Pod
@@ -30,7 +30,7 @@ metadata:
   namespace: votingapp
 spec:
   containers:
-  - image: rredis
+  - image: redis
     name: myredis
 ---
 apiVersion: v1
@@ -59,7 +59,6 @@ spec:
     targetPort: 6379
   selector:
     app: myredis
-  #type: NodePort
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -81,5 +80,7 @@ spec:
           limits:
             memory: "128Mi"
             cpu: "500m"
-        ports:
-        - containerPort: <Port>
+        env:
+          - name: VOTINGAPP_HOST
+            value: myvotingapp
+        
